[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/stable_horde_client/stable_horde_client.gd" type="Script" id=1]
[ext_resource path="res://Gallery.gd" type="Script" id=2]

[node name="Gallery" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 594.0
margin_bottom = 164.0

[node name="Preview" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.5
margin_top = -301.5
margin_right = 380.5
margin_bottom = 301.5

[connection signal="image_processing" from="HTTPRequest" to="." method="_on_HTTPRequest_image_processing"]
[connection signal="images_generated" from="HTTPRequest" to="." method="_on_HTTPRequest_images_generated"]
[connection signal="request_failed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_failed"]
[connection signal="request_initiated" from="HTTPRequest" to="." method="_on_HTTPRequest_request_initiated"]
[connection signal="request_warning" from="HTTPRequest" to="." method="_on_HTTPRequest_request_warning"]
[connection signal="pressed" from="Button" to="HTTPRequest" method="_on_Button_pressed"]
